--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset='UTF-8'/>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
   <meta http-equiv='X-UA-Compatible' content='ie=edge'/>
   <title>Document</title>
-  <script src='js/index.js'></script>
   <link rel='stylesheet' href='index.css'/>
 </head>
 <body>
@@ -29,5 +29,6 @@
 
   </div>
 
+  <script src='js/index.js'></script>
 </body>
 </html>
